2007-01-16  Nick Treleaven  <nick.treleaven@btinternet.com>

 * tagmanager/c.c:
   Backport improvements from Anjuta 2.02.
   Parse anonymous struct and enums (using contextual_fake_count).
   Add better C99 support, e.g. wchar_t variables.


2007-01-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/vte.c:
   Fixed changing directories when the path contains whitespace.
 * src/callbacks.c: When using Save As the returned filename needs to be
                    converted into UTF-8.
 * geany.glade, po/POTFILES.in, src/callbacks.c, src/callbacks.h,
   src/geany.h, src/interface.c, src/main.c, src/makefile.win32,
   src/Makefile.am, src/project.c, src/project.h:
   Started to implement project management (still unusable).
   Added project.[c|h].


2007-01-15  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/symbols.c:
   Reorder symbol list by Namespaces, Classes, Functions, Members,
   Structs, Macros, Variables.
   Add D Variables, rename D Methods -> Functions.


2007-01-14  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/build.c, src/document.c, src/geany.h,
   src/highlighting.c, src/interface.c, src/keyfile.c, src/prefs.c,
   src/sci_cb.c, src/sci_wrappers.c, src/sciwrappers.h, src/utils.c,
   src/utils.h:
   Added sci_set_use_tabs().
   Fixed mem leak in sci_cb_auto_forif().
   Moved free_pointers() to utils.c.
   Applied patch from Jeff Pohlmeyer to add an option for using spaces
   or tabulators when inserting some whitespace.
 * src/about.c: Updated copyright information.
 * geany_private.rc, README, src/*.c, src/*.h:
   Updated copyright information.
 * data/filetype_extensions.conf, src/filetypes.c:
   jsp is a Java extension.
 * src/sci_cb.c:
   Enabled auto completion of constructs for filetype JavaScript.


2007-01-14  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/treeviews.c, src/treeviews.h, src/symbols.c, po/POTFILES.in:
   Move treeviews_init_tag_list() and symbol list GtkTreeIters to
   symbols.c.