@@ -10,6 +10,7 @@
 #ifndef TM_SYMBOL_H
 #define TM_SYMBOL_H
 
+
 /*! \file
  The TMSymbol structure and related routines are used by TMProject to maintain a symbol
  hierarchy. The top level TMSymbol maintains a pretty simple hierarchy, consisting of
@@ -59,6 +60,9 @@ tm_symbol_tree_free() and tm_symbol_tree_new().
 \return The new root symbol.
 */
 TMSymbol *tm_symbol_tree_update(TMSymbol *root, GPtrArray *tags);
+
+/*! Arglist comparison function */
+int tm_arglist_compare(const TMTag *t1, const TMTag *t2);
 
 /*! Symbol comparison function - can be used for sorting purposes. */
 int tm_symbol_compare(const void *p1, const void *p2);
